--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
           </li>
           <li><a href="pages/calendario.html">Calendario de Eventos</a></li>
           <li><a href="#">Imágenes</a></li>
+		  <li><a href="pages/revista.html">Revista</a></li>
           <li><a href="pages/contact.html">Contactanos</a></li>
           <li><a href="pages/404.html"></a></li>//
         </ul>
