--- a/pages/contact.html
+++ b/pages/contact.html
@@ -118,8 +118,10 @@
       <div class="col-lg-8 col-md-8 col-sm-8">
         <div class="left_content">
           <div class="contact_area">
-            <h2>Contact Us</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labolore magna aliqua. Ut enim ad minim veniam. Lorem ipsum dosectetur adipisicing elit, sed do.Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            <h2>Contatanos</h2>
+            <p>Colegio Parroquial Santa Rosa - pertenece a la educación privada, EGB3 - dirección: Vieytes entre Avenida Crovara y Superi 40 - (CP: 1766) Tablada, La Matanza
+
+Teléfono 4652-0940</p>
             <form action="#" class="contact_form">
               <input class="form-control" type="text" placeholder="Name*">
               <input class="form-control" type="email" placeholder="Email*">
@@ -129,7 +131,7 @@
           </div>
         </div>
       </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
+      <!-- <div class="col-lg-4 col-md-4 col-sm-4">
         <aside class="right_content">
           <div class="single_sidebar">
             <h2><span>Popular Post</span></h2>
@@ -158,7 +160,7 @@
           </div>
         </aside>
       </div>
-    </div>
+    </div> -->
   </section>
   <footer id="footer">
     <div class="footer_top">
