--- a/pages/primario.html
+++ b/pages/primario.html
@@ -150,18 +150,22 @@
  </tr>
  <tr height=60 style='height:45.0pt'>
   <td height=60 class=xl67 style='height:45.0pt'>MUESTRA DE INGLÉS:</td>
-  <td class=xl65 width=234 style='width:176pt'>4/12, <br>
+  <td class=xl65 width=234 style='width:176pt'>04/12, <br>
     T.M: 10 y 11 Hs.<br>
     T.T: 15 y 16 Hs.</td>
  </tr>
  <tr height=60 style='height:45.0pt'>
   <td height=60 class=xl67 style='height:45.0pt'>LA MUESTRA NAVIDEÑA</td>
-  <td class=xl65 width=234 style='width:176pt'>será el 9/12 a las 19 hs. para
+  <td class=xl65 width=234 style='width:176pt'>09/12 a las 19 hs. para
   los tres niveles con previa celebración de Misa.</td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl67 style='height:15.0pt'>ACTO DE COLACIÓN</td>
   <td class=xl66>16/12 18:30HS MISA 19HS ACTO</td>
+ </tr>
+ <tr height=60 style='height:45.0pt'>
+  <td height=60 class=xl67 style='height:45.0pt'>PESEBRE VIVIENTE</td>
+  <td class=xl65 width=234 style='width:176pt'>17/12 a las 19 hs. </td>
  </tr>
  <tr height=20 style='height:15.0pt'>
   <td height=20 class=xl67 style='height:15.0pt'>ACTO FIN DE CURSO</td>
