--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
           <li><a href="pages/inicial.html">Nivel Inicial</a></li>
 		  <li class="active"><a href="index.html"><span class="mobile-show">Inicio</span></a></li>
           <li><a href="../pages/primario.html">Nivel Primario</a></li>
-          <li class="dropdown"> <a href="pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">Nivel Secundario</a>
+          <li class="dropdown"><a href="pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">Nivel Secundario</a>
             <ul class="dropdown-menu" role="menu">
+			<li><a href="../pages/secundario.html">Secundario></li>
               <li><a href="../pages/pastoral.html">Pastoral</a></li>
               <li><a href="../pages/salud.html">Salud</a></li>
               <li><a href="../pages/psicofilo.html">Psicología/Filosofía</a></li>
