--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <li><a href="../pages/primario.html">Nivel Primario</a></li>
           <li class="dropdown"><a href="pages/secundario.html" class="dropdown-toggle" data-toggle="dropdown" role="button"  aria-expanded="false">Nivel Secundario</a>
             <ul class="dropdown-menu" role="menu">
-			<li><a href="../pages/secundario.html">Secundario></li>
+			<li><a href="../pages/secundario.html">Secundario</li>
               <li><a href="../pages/pastoral.html">Pastoral</a></li>
               <li><a href="../pages/salud.html">Salud</a></li>
               <li><a href="../pages/psicofilo.html">Psicología/Filosofía</a></li>
